# bible-tui

./: CMakeLists.txt  README.md
src/: bible-tui.cpp  bible-tui.hpp  getverse.cpp  getverse.hpp  main.cpp  options.cpp  options.hpp  start-def.hpp  unicode-theme.hpp
